# UAS_SuA

./: .gitmodules
Assignment1_AMR_Sensor/: .cproject  Lab_ISA_template.ioc
Assignment1_AMR_Sensor/Core/Src/: stm32g4xx_hal_msp.c
Assignment2_Stepper_Motor/: .mxproject  .project  Lab_ISA_template Debug.launch  Lab_ISA_template.ioc  README.md
Assignment2_Stepper_Motor/Core/Inc/: stm32g4xx_it.h
Assignment2_Stepper_Motor/Core/Src/: main.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c
Assignment2_Stepper_Motor/cmake/stm32cubemx/: CMakeLists.txt
Lab_ISA_template/: .mxproject  CMakeLists.txt  README.md  STM32G431KBTX_FLASH.ld  shell.nix
Lab_ISA_template/Core/Inc/: main.h
Lab_ISA_template/Core/Src/: main.c
Lab_ISA_template/cmake/stm32cubemx/: CMakeLists.txt
sua_control/: Cargo.toml  shell.nix
sua_control/src/: gamepad.rs  main.rs  serial_comm.rs
