[package]
name = "sua-control"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.34", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.34"
egui_plot = "0.35"
serialport = "4"
evdev = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
